allow arbitrary properties

--- a/demo/index.html
+++ b/demo/index.html
@@ -26,6 +26,7 @@
     <!-- Internally defined templates -->
     <template id="about">
       <div>Hi, I'm the about page!</div>
+      <div>I like [[stuff]]</div>
     </template>
 
     <script>
