--- a/test/template-yield.html
+++ b/test/template-yield.html
@@ -81,6 +81,17 @@ c!DOCTYPE html>
 
               expect(component.textContent.trim()).to.equal('The weather is rainy');
             });
+
+            it('should retain the old value even when decoupling the instance', function() {
+              component.weather = 'rainy';
+              component.template = templates.weather;
+
+              expect(component.weather).to.equal('rainy');
+
+              component.template = templates.saturn;
+              expect(component.weather).to.equal('rainy');
+
+            });
           });
         });
       });
