--- a/demo/pages.html
+++ b/demo/pages.html
@@ -1,7 +1,9 @@
 <template id="home">
   <div>Hi, I'm the home page!</div>
+  <div>[[text]]</div>
 </template>
 
 <template id="portfolio">
   <div>Hi, I'm the portfolio page!</div>
+  <div>[[text]]</div>
 </template>
