--- a/demo/pages.html
+++ b/demo/pages.html
@@ -7,3 +7,9 @@
   <div>Hi, I'm the portfolio page!</div>
   <div>[[text]]</div>
 </template>
+
+<template is="named-template" name="contact">
+  <div>Hi, I'm the contact page!</div>
+  <div>[[text]]</div>
+  <div>P.S I'm also a named template</div>
+</template>
