--- a/demo/index.html
+++ b/demo/index.html
@@ -30,6 +30,11 @@
       <h2>Output</h2>
       <div style="border: solid black thin; padding: 15px;">
         <template-yield template="[[template]]" page-name="[[pageName]]" page="[[page]]" text="[[text]]"></template-yield>
+        <template-yield template="[[template]]" to="[[wrapper]]" page-name="[[pageName]]" page="[[page]]" text="[[text]]"></template-yield>
+      </div>
+      <div>
+        <h3>Below is a div, used as an insertion point</h3>
+        <div id="wrapper" style="border: solid black thin; padding: 15px;"></div>
       </div>
     </template>
 
@@ -88,6 +93,9 @@
               app.pageName = button.dataset.page;
             });
           });
+
+        // Define insertion demo
+        app.wrapper = document.getElementById('wrapper');
       });
 
       // Setup the default page to be the master, with default sub parts
