call detached when changing instances

--- a/test/template-yield.html
+++ b/test/template-yield.html
@@ -137,6 +137,17 @@
 
               component.template = templates.weather;
             });
+
+            it('should call detached on model when switching instances', function() {
+              component.model = {
+                detached: sinon.spy()
+              };
+
+              component.template = templates.saturn;
+              component.template = templates.weather;
+
+              expect(component.model.detached.called).to.be.true;
+            });
           });
         });
 
